<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center"
                tools:ignore="UselessParent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:text="@string/label_signup"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/register_name"
                   android:layout_marginTop="30dp"
                   android:textSize="18sp"
                   android:id="@+id/label_name"
                   android:layout_marginStart="5dp"
                   android:layout_marginEnd="5dp"
                   android:layout_marginBottom="5dp"/>
                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:autofillHints="@string/register_name"
                    android:textSize="18sp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                    android:importantForAutofill="no"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:inputType="text|textNoSuggestions"
                    tools:ignore="LabelFor,RtlSymmetry"
                    android:layout_margin="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_lastname"
                    android:textSize="18sp"
                    android:id="@+id/label_last_name"
                    android:layout_margin="5dp"/>
                <EditText
                    android:id="@+id/input_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="18sp"
                    android:importantForAutofill="no"
                    android:layout_marginTop="10dp"
                    android:autofillHints="@string/register_lastname"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                    android:layout_marginBottom="10dp"
                    android:inputType="text|textNoSuggestions"
                    tools:ignore="LabelFor,RtlSymmetry"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_username"
                    android:text="@string/register_username"
                    android:textSize="18sp"
                    android:layout_margin="5dp"/>
                <EditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:autofillHints="@string/register_username"
                    android:layout_marginBottom="10dp"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    tools:ignore="LabelFor,RtlSymmetry"
                    android:layout_margin="5dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    android:layout_margin="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/label_pass"
                        android:inputType="textPassword"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    android:layout_margin="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_confpass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/register_confirmpass"
                        android:inputType="textPassword"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_register"
                    android:textSize="18sp"
                    app:backgroundTint="@color/purple_500"
                    android:text="@string/register_btn_register"
                    android:layout_margin="5dp"/>
            </LinearLayout>


</RelativeLayout>


