<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".update_info_user"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_name_update"
                    android:layout_weight="1.5"
                    android:layout_gravity="center"
                    android:paddingStart="40dp"
                    android:textSize="16sp"
                    android:text="@string/register_name"
                    tools:ignore="RtlSymmetry" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_name_update"
                    android:inputType="text"
                    android:textSize="16sp"
                    android:maxLength="10"
                    android:background="@drawable/default_border"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_lastname_update"
                    android:layout_weight="1.5"
                    android:layout_gravity="center"
                    android:paddingStart="40dp"
                    android:inputType="text"
                    android:textSize="16sp"
                    android:maxLength="10"
                    android:text="@string/register_lastname"
                    tools:ignore="RtlSymmetry,TextViewEdits" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_lastname_update"
                    android:inputType="text"
                    android:textSize="16sp"
                    android:background="@drawable/default_border"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_username_update"
                    android:layout_weight="1.5"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:paddingStart="40dp"
                    android:text="@string/register_username"
                    tools:ignore="RtlSymmetry" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_username_update"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp"
                    android:background="@drawable/custom_border"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingStart="28dp"
                    app:endIconMode="password_toggle"
                    tools:ignore="RtlSymmetry">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_pass_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/label_pass"
                        android:inputType="textPassword"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_birth_update"
                    android:layout_weight="1.63"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:paddingStart="40dp"
                    android:text="@string/birth"
                    tools:ignore="RtlSymmetry" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginEnd="10dp"
                    android:textSize="16sp"
                    android:background="@drawable/default_border"
                    android:id="@+id/label_date_update"/>

                <ImageView
                    android:id="@+id/btn_update_date"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:background="@drawable/ic_date" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_country_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.5"
                    android:textSize="16sp"
                    android:text="@string/country"
                    android:paddingStart="40dp" />
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:id="@+id/spinner_city" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_phone_update"
                    android:layout_weight="1.5"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:paddingStart="40dp"
                    android:text="@string/phone"/>
                <EditText
                    android:id="@+id/input_phone_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:background="@drawable/default_border"
                    android:maxLength="10"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_gender_update"
                    android:layout_weight="1.5"
                    android:paddingStart="40dp"
                    android:textSize="16sp"
                    android:text="@string/gender"
                    tools:ignore="RtlSymmetry" />
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/spinner_gender" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_update_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:text="@string/btn_update"
                android:textSize="16sp"
                app:backgroundTint="@color/green" />



        </LinearLayout>
    </ScrollView>



</LinearLayout>