<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="#63B7ABFA"
        android:elevation="40dp"
        tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="500dp"

        android:background="@drawable/svg_login"/>

             <ImageView
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:background="@drawable/user"
                 android:elevation="20dp"
                 android:layout_marginTop="120dp"
                 android:layout_marginStart="5dp"
                 android:layout_marginBottom="20dp"
                 android:layout_gravity="center"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"

            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:background="@drawable/custom_border_layout"
                android:backgroundTint="@color/white"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:orientation="vertical"
                android:paddingTop="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="#5B5A61"
                    android:textSize="20sp"
                    android:textStyle="bold" />



                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    app:boxBackgroundMode="outline"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextTextEmailAddress"
                        android:ems="10"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress|textNoSuggestions"
                        android:textSize="15sp"
                        android:hint="@string/label_user" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    app:endIconMode="password_toggle"
                    android:layout_marginBottom="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/label_pass"
                        android:inputType="textPassword"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/sign_in"
                android:textSize="18sp"
                app:backgroundTint="@color/green" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/sign_up"
                android:textSize="18sp"
                app:backgroundTint="@color/primary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/facebook"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="7dp"
                    android:background="@drawable/facebook" />

                <ImageView
                    android:id="@+id/twiter"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="7dp"
                    android:background="@drawable/twitter" />

                <ImageView
                    android:id="@+id/linkelind"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="7dp"
                    android:background="@drawable/linkedin" />

                <ImageView
                    android:id="@+id/google"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="7dp"
                    android:background="@drawable/search" />


            </LinearLayout>
        </LinearLayout>

</RelativeLayout>
